--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-pager-view": "6.7.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "sweet-sfsymbols": "^0.7.2",
-    "react-native-pager-view": "6.7.1"
+    "sweet-sfsymbols": "^0.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
